Oefeningenles8/error.txt
oefening113.cpp: In function ‘void oef1()’:
oefening113.cpp:10:18: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11
  std::vector<T> v{1,4};
                  ^
oefening113.cpp:11:14: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11
  v.push_back({1,3});
              ^
oefening113.cpp: In function ‘int main(int, char**)’:
oefening113.cpp:17:7: error: no matching function for call to ‘oef1()’
  oef1();
       ^
oefening113.cpp:8:6: note: candidate: template<class T> void oef1()
 void oef1()
      ^
oefening113.cpp:8:6: note:   template argument deduction/substitution failed:
oefening113.cpp:17:7: note:   couldn't deduce template parameter ‘T’
  oef1();
       ^
